# lumux

./: .gitignore  AGENTS.md  LICENSE  PLAN_black_bars.md  README.md  Screencast_20260131_133852.webm  com.github.lumux.yml  hue-entertainment-api.txt  hue_sync_test.html  io.github.enginkirmaci.lumux.metainfo.xml  io.github.enginkirmaci.lumux.yml  main.py  pyproject.toml  python3-modules.json  requirements.txt  setup.py  test_alternative.py  test_complete.py  test_correct_format.py  test_debug.py  test_dtls_ctypes.py  test_dtls_full.py  test_formats.py  test_full_debug.py  test_gnutls.py  test_mbedtls.py  test_proper.py  test_pty.py  test_pydtls.py  test_stream.py  test_subprocess_verbose.py  test_v2_format.py  test_wizard.py
.zcode/plans/: plan-sess_d48dd519-e45e-47d3-ba05-7cf4aeb5714d.md  plan-sess_eec5017d-0416-4548-ac59-3e5d2c372464.md
.zed/: debug.json
config/: settings_manager.py  zone_mapping.py
data/: com.github.lumux.desktop  com.github.lumux.metainfo.xml  default_settings.json  default_zones.json  io.github.enginkirmaci.lumux.desktop  io.github.enginkirmaci.lumux.metainfo.xml
flatpak/: io.github.enginkirmaci.lumux.yml  python3-modules.json
gui/: bridge_wizard.py  main_window.py  settings_dialog.py  tray_icon.py  zone_preview_widget.py
hue_sync/: bridge.py  capture.py  sync.py
lumux/: app_context.py  black_bar_detector.py  bridge.py  bridge_client.py  capture.py  colors.py  entertainment.py  light_updater.py  mode_manager.py  reading_mode.py  sync.py  zones.py
lumux/utils/: __init__.py
src/lumux/: __init__.py  __main__.py  app_context.py  capture.py  hue_bridge.py  mode_manager.py  reading_mode.py  sync.py  zones.py
src/lumux/config/: __init__.py  settings_manager.py  zone_mapping.py
src/lumux/gui/: __init__.py  main_window.py  settings_dialog.py
src/lumux/utils/: logging.py
utils/: rgb_xy_converter.py
